--- a/index.html
+++ b/index.html
@@ -2,9 +2,25 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>calculator</title>
+    <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
-
+    <main>
+        <h1 id="title">Calculator</h1>
+        <select name="list[]" id="list">
+            <option value="190">Капучино</option>
+            <option value="180">Латте</option>
+            <option value="150">Американо</option>
+            <option value="120">Эспрессо</option>
+            <option value="220">Раф</option>
+        </select>
+        <input type="text" id="count">
+        <button onclick="calculate()">Рассчитать</button>
+        <div id="errorlog"></div>
+        <div id="answer"></div>
+    </main>
+    <script src="index.js"></script>
 </body>
 </html>
