added listener from js in index.js

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             </select>
             <input type="text" id="count" placeholder="Количество">
         </div>
-        <button onclick="calculate()" id="button">Рассчитать</button>
+        <button id="button">Рассчитать</button>
         <div id="errorlog"></div>
         <div id="answer">Ответ</div>
     </main>
