--- a/index.html
+++ b/index.html
@@ -4,11 +4,40 @@
     <meta charset="UTF-8">
     <title>calculator</title>
     <link rel="stylesheet" href="style.css">
-
 </head>
 <body>
     <main>
-        <h1 id="title">Calculator</h1>
+        <div class="calculator">
+            <div class="calc-head">
+                <h1 id="title">Calculator - task 6</h1>
+            </div>
+            <div class="calc-body">
+                <div class="calc-input">
+                    <div id="product-type-outter" class="plan-container">
+                        <h3 class="calc-text">Выберите тарифный план сервера</h3>
+                        <div id="calc-radio-group" class="plan-fields"></div>
+                    </div>
+                    <input type="text" id="count-6" class="count count-6" placeholder="Количество">
+                            <h3>Опции</h3>
+                            <div id="subproducts" class="input-container">
+                                <select class="option" name="subproducts-select" id="select" disabled>
+                                    <option class="option" value="">Выберите опцию</option>
+                                </select>
+                            </div>
+                            <h3 class="calc-text">Дополнительно</h3>
+                            <div id="property-container">
+                                    <input type="checkbox" name="product-property" id="property" value="" disabled>
+                                    <label for="product-property" id="property-label">Нет</label>
+                            </div>
+                </div>
+                    <button id="button-6">Рассчитать</button>
+                    <div id="errorlog-6"></div>
+                    <div id="answer-6">Ответ</div>
+            </div>
+        </div>
+    </main>
+    <main>
+        <h1 id="title">Calculator - task 5</h1>
         <div class="input-container">
             <select name="list[]" id="list">
                 <option value="190">Капучино</option>
@@ -17,11 +46,11 @@
                 <option value="120">Эспрессо</option>
                 <option value="220">Раф</option>
             </select>
-            <input type="text" id="count" placeholder="Количество">
+            <input type="text" id="count-5" class="count" placeholder="Количество">
         </div>
-        <button id="button">Рассчитать</button>
-        <div id="errorlog"></div>
-        <div id="answer">Ответ</div>
+        <button id="button-5">Рассчитать</button>
+        <div id="errorlog-5" class="errorlog"></div>
+        <div id="answer-5">Ответ</div>
     </main>
     <script src="index.js"></script>
 </body>
